# mnelab

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  azure-pipelines.yml  azure-template.yml  create-dmg.py  datasets.py  filterdialog.py  infowidget.py  main.py  mkdocs.yml  mnelab.py  mnelab.qrc  pyinstaller-linux.sh  pyinstaller-macos.sh  pyinstaller-windows.bat  pyproject.toml  readthedocs.yml  referencedialog.py  requirements-dev.txt  requirements-extras.txt  requirements-oldest.txt  requirements-optional.txt  requirements.txt  setup.cfg  setup.py  test.vhdr  test.vmrk  test_pyside6.py
.github/: check_license_headers.py  check_uv_build.py
.github/workflows/: pyside-linux.yml  python-build.yml  python-pypi.yml  python-style.yml  python-test.yml  release.yml  standalone.yml  test.yml
dialogs/: channeldialog.py  channeldialog.ui  channelpropertiesdialog.py  editselectedchannelsdialog.py  editselectedchannelsdialog.ui  montagedialog.py  pickbadchannelsdialog.py  pickchannelsdialog.py  referencedialog.py  ui_channeldialog.py  ui_editselectedchannelsdialog.py  ui_pickbadchannelsdialog.py
dialogs/Resources/UI/: pickbadchannelsdialog.ui
doc/: requirements.txt
doc/source/: about.md  conf.py  index.md
doc/source/_static/: custom.css
doc/source/_templates/: page.html
doc/source/examples/: erds_maps.md  erp.md  index.md
doc/source/tutorial/: index.md
docs/: index.md
docs/documentation/: erds_maps.md  erp.md  index.md  rename_channels.md  settings.md
docs/examples/: rename_channels.md
docs/quickstart/: index.md
docs/source/: conf.py
docs/source/_static/: custom.css
docs/source/examples/: index.md
docs/source/tutorial/: index.md
docs/tutorial/: index.md
mnelab/: __init__.py  __main__.py  icons.qrc  mainwindow.py  mnelab.py  model.py  rc_icons.py  resources.py  settings.py  test_pyside6.py  version.py  viz.py
mnelab/batch/app/: batch_ui.py  batchdialog.py  psd.py  psd_ui.py  tfr.py  tfr_ui.py  utils.py
mnelab/dialogs/: __init__.py  annotations.py  annotationsdialog.py  append.py  append_data.py  appenddialog.py  batchdialog.py  calc.py  calcdialog.py  change_reference.py  channel_properties.py  channelpropertiesdialog.py  concatenatedatadialog.py  create_epochs.py  crop.py  crop_data.py  cropdialog.py  drop_bad_epochs.py  edit_annotations.py  edit_channel_properties.py  edit_events.py  epoch.py  epochdialog.py  epochingdialog.py  erds.py  erdsdialog.py  error_message.py  errormessagebox.py  events.py  eventsdialog.py  evokedstatesdialog.py  evokedtopodialog.py  filter.py  filter_data.py  filterdialog.py  find_events.py  findeventsdialog.py  history.py  historydialog.py  interpolate_bad_channels.py  (+41 more)
mnelab/ica_templates/: template-ica.fif
mnelab/icons/dark/: index.theme
mnelab/icons/default/: index.theme
mnelab/icons/light/: index.theme
mnelab/io/: __init__.py  mat.py  readers.py  writers.py  xdf.py
mnelab/test/: test_actions.py  test_readers.py
mnelab/tests/: test_actions.py
mnelab/tfr/app/: avg_epochs_tfr.py  epochs_psd.py  error.py  psd.py  raw_psd.py  select_channels.py  time_freq.py
mnelab/tfr/app/ui/: avg_epochs_tfr_UI.py  epochs_psd_UI.py  psd_UI.py  raw_psd_UI.py  time_freq_UI.py
mnelab/tfr/backend/: avg_epochs_tfr.py  epochs_psd.py  raw_psd.py  time_freq.py  util.py  viz_epochs.py  viz_raw.py  viz_tfr.py  viz_util.py
mnelab/utils/: __init__.py  cluster.py  datasets.py  dependencies.py  error.py  fixes.py  ica_utils.py  information.py  io.py  montage.py  read.py  syntax.py  utils.py  xdf.py
mnelab/widgets/: __init__.py  infowidget.py
src/mnelab/: __init__.py  __main__.py  mainwindow.py  model.py  settings.py  sidebar.py  viz.py
src/mnelab/dialogs/: __init__.py  annotations.py  annotations_from_events.py  append.py  artifact_detection.py  brainvision.py  bvrf.py  calc.py  channel_properties.py  channel_stats.py  create_annotations_from_events.py  crop.py  dataset_details.py  drop_bad_epochs.py  epoch.py  erds.py  error_message.py  events.py  filter.py  find_events.py  history.py  iclabel.py  log.py  mat.py  montage.py  npy.py  pick_channels.py  pipeline.py  pipeline_builder.py  plot_evoked.py  psd.py  reference.py  rename_channels.py  resample.py  run_ica.py  utils.py  xdf_chunks.py  xdf_metadata.py  xdf_streams.py
src/mnelab/icons/: create-macos-icon.sh  mnelab-logo-macos.icns  mnelab-logo.icns  mnelab-macos.icns
src/mnelab/icons/mnelab-macos.icon/: icon.json
src/mnelab/io/: __init__.py  mat.py  npy.py  readers.py  writers.py  xdf.py
src/mnelab/test/: test_readers.py
src/mnelab/utils/: __init__.py  artifact_detection.py  channelstats_calculations.py  dependencies.py  iclabel.py  labeling.py  syntax.py  utils.py
src/mnelab/widgets/: __init__.py  infowidget.py  pipeline_tree.py  sidebar.py  spinbox.py
standalone/: create-standalone-linux.sh  create-standalone-macos.py  create-standalone-windows.bat  create-standalone-windows.ps1  get_version.py  mnelab-macos.spec  mnelab-windows.iss
standalone/flatpak/: README.md  generate-pip-sources.sh  io.github.cbrnr.mnelab.desktop  io.github.cbrnr.mnelab.metainfo.xml  io.github.cbrnr.mnelab.yml  python3-mnelab-deps.json  python3-pyside6.json
standalone/linux/: pyinstaller-linux.sh
standalone/macos/: create-standalone-macos.py  mnelab-macos.spec  pyinstaller-macos.py
standalone/rthooks/: rthook_matplotlib.py
standalone/windows/: mnelab-installer.iss  pyinstaller-windows.bat
tests/: conftest.py  test_actions.py  test_dependencies.py  test_iclabel.py  test_main.py  test_model.py  test_pipeline_tree.py  test_readers.py  test_settings.py  test_syntax.py  test_updates.py  test_utils.py
tests/data/: generate_test_data.py  iclabel_continuous.npz  iclabel_epoched.npz  iclabel_short.npz
utils/: datasets.py
