[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[project]
name = "mnelab"
version = "1.0.4"
description = "A graphical user interface for MNE"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    {name = "Clemens Brunner", email = "clemens.brunner@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["EEG", "MEG", "MNE", "GUI", "electrophysiology"]
dependencies = [
    "edfio >= 0.4.2",
    "matplotlib >= 3.8.0",
    "mne >= 1.7.0",
    "numpy >= 2.0.0",
    "pybv >= 0.7.4",
    "pyxdf >= 1.16.4",
    "pyside6 >= 6.7.1",
    "scipy >= 1.14.1",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material >= 9.6.14",
]
full = [
    "mne-qt-browser >= 0.6.2",  # alternative browser backend
    "python-picard >= 0.8.0",  # picard
    "scikit-learn >= 1.3.0",  # fastica
]

[dependency-groups]
dev = [
    "dmgbuild >= 1.6.5; platform_system=='Darwin'",
    "pillow >= 11.3.0",
    "pyinstaller >= 6.14.2",
    "pytest >= 8.4.1",
    "pytest-qt >= 4.5.0",
    "pytest-xvfb >= 3.1.1; platform_system=='Linux'",
    "ruff >= 0.12.3",
]

[project.gui-scripts]
mnelab = "mnelab:main"

[project.urls]
homepage = "https://github.com/cbrnr/mnelab"
documentation = "https://mnelab.readthedocs.io/en/latest/"
repository = "https://github.com/cbrnr/mnelab"
changelog = "https://github.com/cbrnr/mnelab/blob/main/CHANGELOG.md"

[tool.ruff.lint]
select = ["C4", "E", "F", "I", "PERF", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"mainwindow.py" = ["F405"]
