[build-system]
requires = ["uv_build >= 0.11.6, < 0.12.0"]
build-backend = "uv_build"

[project]
name = "mnelab"
version = "1.5.0.dev0"
description = "A graphical user interface for MNE"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    {name = "Clemens Brunner", email = "clemens.brunner@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = ["EEG", "MEG", "MNE", "GUI", "electrophysiology"]
dependencies = [
    "black >= 25.3.1",
    "edfio >= 0.4.13",
    "isort >= 8.0.1",
    "matplotlib >= 3.10.8",
    "mne >= 1.12.1",
    "numpy >= 2.4.4",
    "onnx>=1.21.0",
    "pybv >= 0.7.6",
    "pybvrf>=0.1.4",
    "pyside6 >= 6.11.0",
    "pyxdf >= 1.17.4",
    "scipy >= 1.17.1",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material >= 9.7.6",
]
full = [
    "autoreject >= 0.4.3",  # automatic artifact rejection
    "mne-qt-browser >= 0.7.4",  # alternative browser backend
    "python-picard >= 0.8.1",  # picard
    "scikit-learn >= 1.8.0",  # fastica
]

[dependency-groups]
dev = [
    "dmgbuild >= 1.6.7; platform_system=='Darwin'",
    "pillow >= 12.2.0",
    "pyinstaller >= 6.19.0",
    "pytest >= 9.0.3",
    "pytest-qt >= 4.5.0",
    "pytest-xvfb >= 3.1.1; platform_system=='Linux'",
    "ruff >= 0.15.11",
]

[project.gui-scripts]
mnelab = "mnelab:main"

[project.urls]
homepage = "https://github.com/cbrnr/mnelab"
documentation = "https://mnelab.readthedocs.io/en/latest/"
repository = "https://github.com/cbrnr/mnelab"
changelog = "https://github.com/cbrnr/mnelab/blob/main/CHANGELOG.md"

[tool.ruff.lint]
select = ["C4", "E", "F", "I", "PERF", "UP", "W"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"mainwindow.py" = ["F405"]
