[metadata]
name = mnelab
version = attr: mnelab.__version__
url = https://github.com/cbrnr/mnelab
author = Clemens Brunner
author_email = clemens.brunner@gmail.com
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license = BSD 3-Clause License
description = A graphical user interface for MNE
long_description = file: README.md
long_description_content_type = text/markdown
keywords = EEG, MEG, MNE, GUI, electrophysiology

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    mne>=0.22.0
    QtPy>=1.9.0
    numpy>=1.14.0
    scipy>=1.0.0
    matplotlib>=2.1.0
    pyobjc-framework-Cocoa>=5.2.0; platform_system=="Darwin"

[options.extras_require]
full =
    scikit-learn>=0.20.0  # fastica
    python-picard>=0.4.0  # picard
    pyEDFlib>=0.1.15  # edf
    pyxdf>=1.16.0  # xdf
    pybv>=0.4.0  # brainvision
    PyQt5>=5.10.0  # pyqt5
    PySide2>=5.10.0  # pyside2

[options.entry_points]
console_scripts =
    mnelab = mnelab.__main__:main

[flake8]
max-line-length = 92
