[metadata]
name = mnelab
version = attr: mnelab.__version__
url = https://github.com/cbrnr/mnelab
author = Clemens Brunner
author_email = clemens.brunner@gmail.com
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = BSD 3-Clause License
description = A graphical user interface for MNE
long_description = file: README.md
long_description_content_type = text/markdown
keywords = EEG, MEG, MNE, GUI, electrophysiology

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    mne>=0.24.0
    PySide6>=6.2.0
    numpy>=1.14.0
    scipy>=1.0.0
    matplotlib>=3.5.0
    pyxdf>=1.16.0
    pyobjc-framework-Cocoa>=5.2.0; platform_system=="Darwin"

[options.extras_require]
full =
    scikit-learn>=0.20.0  # fastica
    python-picard>=0.4.0  # picard
    pyEDFlib>=0.1.15  # edf
    pybv>=0.4.0  # brainvision

[options.entry_points]
gui_scripts =
    mnelab = mnelab:main

[flake8]
max-line-length = 92
