[metadata]
name = mnelab
version = attr: mnelab.__version__
url = https://github.com/cbrnr/mnelab
author = Clemens Brunner
author_email = clemens.brunner@gmail.com
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
license = BSD 3-Clause License
description = A graphical user interface for MNE
long_description = file: README.md
long_description_content_type = text/markdown
keywords = EEG, MEG, MNE, GUI, electrophysiology

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    mne>=1.2.0
    PySide6>=6.4.2
    numpy>=1.20.0
    scipy>=1.7.0
    matplotlib>=3.6.2
    pyxdf>=1.16.0
    pyobjc-framework-Cocoa>=7.3.0; platform_system=="Darwin"

[options.extras_require]
full =
    scikit-learn>=1.0.0  # fastica
    python-picard>=0.7.0  # picard
    pyEDFlib>=0.1.22  # edf
    pybv>=0.7.4  # brainvision

[options.entry_points]
gui_scripts =
    mnelab = mnelab:main

[flake8]
max-line-length = 92
per-file-ignores =
    __init__.py:F401
    mainwindow.py:F405

[isort]
line_length = 92
multi_line_output = 3
include_trailing_comma = true
